<resources>


    //Global
    <string name="app_name">Medi Cream Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">Register your cream type</string>
    <string name="action_record">>Create Your Records</string>
    <string name="title_activity_register">Register your cream type</string>
    <string name="title_activity_record">Take record here</string>
    <string name="validation_empty">This is required field!</string>
    <string name="cancel">Cancel</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="description_global_logo_img">logo image</string>

    //Toast
    <string name="toast_created">Created</string>
    <string name="toast_added">Added</string>
    <string name="toast_updated">Updated</string>


    //Register Activity
    <string name="register_placeholder_name">Medi Cream Name</string>
    <string name="register_placeholder_description">Description</string>
    <string name="register_validation_empty">This is required field!</string>
    <string name="btn_register">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="register_dialog_add_title">Enter Medi Cream Name</string>
    <string name="register_dialog_edit_title">Update Medi Cream Name</string>
    <string name="description_register_fab">Floating action button to register your cream</string>
    <string name="description_register_dialog_name">You can enter name here</string>
    <string name="description_register_dialog_desctiption">You can enter cream description here</string>
    <string name="description_register_dialog_edit_name">You can change name here</string>
    <string name="description_register_dialog_edit_desctiption">You can change cream description here</string>

    //Record Activity
    <string name="record_placeholder_name">Cream Name</string>
    <string name="record_placeholder_parts">Which part of you</string>
    <string name="record_placeholder_date">Click here to select Date</string>
    <string name="record__date">Click here to select Date</string>
    <string name="record_dialog_title_create">Create Your Records</string>
    <string name="record_btn_create">Create</string>
    <string name="description_record_fab">Floating action button to create your records</string>
    <string name="description_record_dialog_date">You can select date here</string>
    <string name="description_record_dialog_bodypart">You can select body part here</string>
    <string name="description_record_dialog_name">You can select name here</string>
    <string name="description_record_dialog_edit_date">You can select date here</string>
    <string name="description_record_dialog_edit_bodypart">You can select body part here</string>
    <string name="description_record_dialog_edit_name">You can select name here</string>


    //Main Activity
    <string name="main_placeholder_name">Select Cream Here to see your records!</string>
    <string name="main_threedays">3 days ~ 1 week</string>
    <string name="main_oneweek">1 week ~ 3 week</string>
    <string name="main_threeweeks"> 3 weeeks~</string>

    <string name="main_face">Face</string>
    <string name="main_body">Body</string>
    <string name="main_leftarm">LeftArm</string>
    <string name="main_rightarm">RightArm</string>
    <string name="main_leftleg">LeftLeg</string>
    <string name="main_rightleg">RightLeg</string>

    <string name="description_main_name_spinner">Here you can select your registered cream</string>
    <string name="description_main_face_img">Face image</string>
    <string name="description_main_body_img">Body image</string>
    <string name="description_main_leftarm_img">Left arm image</string>
    <string name="description_main_rightarm_img">Right arm image</string>
    <string name="description_main_leftleg_img">Left leg image</string>
    <string name="description_main_rightleg_img">Right leg image</string>
    <string name="description_main_fab">Floating action button to open other buttons</string>
    <string name="description_main_sub_register_fab">Floating action button to register page</string>
    <string name="description_main_sub_record_fab">Floating action button to record page</string>

    //Widget
    <string name="widget_title">Medi Cream List</string>
    <string name="empty_record_list">No Record Found</string>

    //Ads
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    //Analytics
    <string name="category_1">Action</string>
    <string name="action_type_1">Register</string>

</resources>
