<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
    to prevent the parent view from receiving focus again -->
    <!--ref: TextEdit unfocus: http://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_date"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/record_date"
            android:inputType="date"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/record_placeholder_date"
            android:nextFocusUp="@id/dialog_layout_root"
            android:nextFocusLeft="@id/dialog_layout_root"
            />

    </android.support.design.widget.TextInputLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/record_parts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/record_placeholder_parts"
        />


    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/record_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/record_placeholder_name"
        />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:text="@string/record_btn_create"
        />

</LinearLayout>
