<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_global_logo_img"
            android:paddingStart="30dp"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:src="@drawable/ic_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/app_name"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryLight">
        <ListView
            android:id="@+id/widget_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/widget_medi_list_item"/>
        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/empty_record_list"/>
    </FrameLayout>

</LinearLayout>