<!--ref: relative layout - https://developer.android.com/guide/topics/ui/layout/relative.html-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.masakorelab.medicreamtracker.MainActivityFragment"
                tools:showIn="@layout/activity_main">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/item_explanation_label"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/main_placeholder_name"
        android:layout_below="@id/adView"
        />

    <Spinner
        android:id="@+id/item_spinner"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightLarge"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/item_explanation_label"
        />

    <android.support.v7.widget.GridLayout
        android:id="@+id/main_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_spinner"
        app:columnCount="3"
        >
        <TextView
            android:text="@string/main_threedays"
            android:background="@color/threedays"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"
            />
        <TextView
            android:text="@string/main_oneweek"
            android:background="@color/oneweek"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"
            />
        <TextView
            android:text="@string/main_threeweeks"
            android:background="@color/threeweeks"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"
            />
    </android.support.v7.widget.GridLayout>

    <ImageView
        android:id="@+id/img_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_grid"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/head"
        />

    <ImageView
        android:id="@+id/img_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_head"
        android:background="@drawable/body"/>

    <ImageView
        android:id="@+id/img_left_arm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/left_arm"
        android:layout_below="@id/img_head"
        android:layout_toLeftOf="@id/img_body"
        />

    <ImageView
        android:id="@+id/img_right_arm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/right_arm"
        android:layout_below="@id/img_head"
        android:layout_toRightOf="@id/img_body"
        />

    <ImageView
        android:id="@+id/img_left_leg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/img_body"
        android:layout_alignStart="@id/img_body"
        android:background="@drawable/left_leg"/>

    <ImageView
        android:id="@+id/img_right_leg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@id/img_body"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/img_left_leg"
        android:background="@drawable/right_leg"/>

</RelativeLayout>
